--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,17 +18,33 @@ services:
       - influxdb2-admin-username
       - influxdb2-admin-password
       - influxdb2-admin-token
-    volumes:
-      - influxdb_data:/var/lib/influxdb2
-      - influxdb_config:/etc/influxdb2
-  
-  # simulator:
-  #   build: ./simulator
-  #   depends_on:
-  #     - influxdb
-  #   environment:
-  #     - INFLUXDB_URL=${INFLUXDB_URL}
 
+  grafana:
+    build: ./grafana
+    ports:
+      - "3000:3000"
+    depends_on:
+      - influxdb
+    volumes:
+      - grafana_data:/var/lib/grafana
+
+  data_sim:
+    build: ./data_sim
+    depends_on:
+      - influxdb
+    environment:
+      DOCKER_INFLUXDB_INIT_USERNAME_FILE: /run/secrets/influxdb2-admin-username
+      DOCKER_INFLUXDB_INIT_PASSWORD_FILE: /run/secrets/influxdb2-admin-password 
+      DOCKER_INFLUXDB_INIT_ADMIN_TOKEN_FILE: /run/secrets/influxdb2-admin-token
+
+      DOCKER_INFLUXDB_INIT_MODE: ${DOCKER_INFLUXDB_INIT_MODE}
+      DOCKER_INFLUXDB_INIT_ORG: ${DOCKER_INFLUXDB_INIT_ORG}
+      DOCKER_INFLUXDB_INIT_BUCKET: ${DOCKER_INFLUXDB_INIT_BUCKET}
+      INFLUXDB_URL: http://influxdb:8086
+    secrets:
+      - influxdb2-admin-username
+      - influxdb2-admin-password
+      - influxdb2-admin-token
   # anomaly_detector:
   #   build: ./detector
   #   depends_on:
@@ -44,6 +60,7 @@ secrets:
     file: ./.env.influxdb2-admin-password
   influxdb2-admin-token:
     file: ./.env.influxdb2-admin-token
+
+
 volumes:
-  influxdb_data:
-  influxdb_config:
+  grafana_data:
