working on anomaly detection
Signed-off-by: Fatih Durmaz <mail.fatih.durmaz@gmail.com>

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,14 +19,14 @@ services:
       - influxdb2-admin-password
       - influxdb2-admin-token
 
-  grafana:
-    build: ./grafana
-    ports:
-      - "3000:3000"
-    depends_on:
-      - influxdb
-    volumes:
-      - grafana_data:/var/lib/grafana
+  # grafana:
+  #   build: ./grafana
+  #   ports:
+  #     - "3000:3000"
+  #   depends_on:
+  #     - influxdb
+  #   volumes:
+  #     - grafana_data:/var/lib/grafana
 
   data_sim:
     build: ./data_sim
