--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 DOCKER_INFLUXDB_INIT_MODE=setup
 DOCKER_INFLUXDB_INIT_ORG=example_org
 DOCKER_INFLUXDB_INIT_BUCKET=example_bucket
+INFLUXDB_URL=http://localhost:8086
