--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,19 +19,11 @@ services:
       - influxdb2-admin-password
       - influxdb2-admin-token
 
-  # grafana:
-  #   build: ./grafana
-  #   ports:
-  #     - "3000:3000"
-  #   depends_on:
-  #     - influxdb
-  #   volumes:
-  #     - grafana_data:/var/lib/grafana
-
   data_sim:
     build: ./data_sim
     depends_on:
       - influxdb
+    #restart: unless-stopped
     environment:
       DOCKER_INFLUXDB_INIT_USERNAME_FILE: /run/secrets/influxdb2-admin-username
       DOCKER_INFLUXDB_INIT_PASSWORD_FILE: /run/secrets/influxdb2-admin-password 
@@ -45,14 +37,39 @@ services:
       - influxdb2-admin-username
       - influxdb2-admin-password
       - influxdb2-admin-token
-  # anomaly_detector:
-  #   build: ./detector
-  #   depends_on:
-  #     - influxdb
-  #   environment:
-  #     - INFLUXDB_URL=${INFLUXDB_URL}
-  #     - INFLUXDB_TOKEN=${INFLUXDB_TOKEN}
-  #     - INFLUXDB_ORG=${INFLUXDB_ORG}
+
+  detector:
+    build: 
+      context: ./detector
+    depends_on:
+      - influxdb
+      - data_sim
+    restart: unless-stopped
+    environment:
+      DOCKER_INFLUXDB_INIT_USERNAME_FILE: /run/secrets/influxdb2-admin-username
+      DOCKER_INFLUXDB_INIT_PASSWORD_FILE: /run/secrets/influxdb2-admin-password 
+      DOCKER_INFLUXDB_INIT_ADMIN_TOKEN_FILE: /run/secrets/influxdb2-admin-token
+
+      DOCKER_INFLUXDB_INIT_MODE: ${DOCKER_INFLUXDB_INIT_MODE}
+      DOCKER_INFLUXDB_INIT_ORG: ${DOCKER_INFLUXDB_INIT_ORG}
+      DOCKER_INFLUXDB_INIT_BUCKET: ${DOCKER_INFLUXDB_INIT_BUCKET}
+      INFLUXDB_URL: http://influxdb:8086
+    secrets:
+      - influxdb2-admin-username
+      - influxdb2-admin-password
+      - influxdb2-admin-token
+
+  dashboard:
+    build: 
+      context: ./dashboard
+    ports:
+      - 5006:5006
+    depends_on:
+      - influxdb
+      - data_sim
+      - detector
+    restart: unless-stopped
+
 secrets:
   influxdb2-admin-username:
     file: ./.env.influxdb2-admin-username
@@ -61,6 +78,3 @@ secrets:
   influxdb2-admin-token:
     file: ./.env.influxdb2-admin-token
 
-
-volumes:
-  grafana_data:
